# smart-roomba

./: .gitignore  README.md
documentation/: Power_distribution.drawio  Roomba - MCU State Machine.drawio  Roomba High Level Architecture V1.drawio  Roomba High Level Architecture V2.drawio  Roomba High Level Architecture.drawio
mcu/: CMakeLists.txt  README.md  app.overlay  prj.conf  west.yml
mcu/board/: stm32f4_discovery.conf
mcu/boards/: stm32f4_disco.conf  stm32f4_discovery.conf
mcu/conf/: debug.conf  release.conf
mcu/inc/: state_machine.h
mcu/lib/: CMakeLists.txt
mcu/src/: button_test.c  error_handling.c  main.c  scheduler.c  state_machine.c
mcu/tests/state_machine/: CMakeLists.txt  prj.conf  testcase.yaml
mcu/tests/state_machine/src/: test_state_machine.c
